# github_recommand

./: .cnb.yml  .env.example  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  findings.md  main.py  progress.md  pyproject.toml  start.py  task_plan.md
.claude/: settings.local.json
backend/: start.py
backend/app/: config.py  database.py  logger.py  main.py
backend/app/crawler/: __init__.py  base.py  bilibili.py  it_cafe.py  static_crawler.py  xuanli.py
backend/app/itcoffee/: __init__.py  retry_failed.py  service.py
backend/app/models/: __init__.py  itcoffee.py  project.py  xuanli199.py
backend/app/routers/: __init__.py  itcoffee.py  projects.py  xuanli199.py
backend/app/schemas/: __init__.py  project.py
backend/app/scripts/: categorize_projects.py  generate_descriptions.py  migrate_projects.py
backend/app/services/: __init__.py  ai_analyzer.py  ai_provider_service.py  ai_search_service.py  github_service.py  update_service.py
backend/app/xuanli199/: __init__.py  service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: ai.js  projects.js
frontend/src/components/: ProjectCard.vue  SettingsDialog.vue
frontend/src/views/: Home.vue  ProjectDetail.vue
workers/: github-readme-proxy.js
