[project]
name = "github-demo-recommend"
version = "0.1.0"
description = "GitHub Project Recommendation System - Crawl and recommend trending GitHub projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.0",
    "zhipuai>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
dev = "uvicorn backend.app.main:app --reload --host 0.0.0.0 --port 8000"
start = "backend.start:main"
